# convex_hull

./: CMakeLists.txt  algorithm.hpp  chans_algorithm.inl  main.cpp  quick_hull.inl  quickhull.inl
benchmarks/: CMakeLists.txt  convex_hull_benchmark.cpp
docs/: convex_hull.js  convex_hull.wasm  index.html
